--- a/k8s/overlays/dev/secrets/rabbitmq-secret.yaml
+++ b/k8s/overlays/dev/secrets/rabbitmq-secret.yaml
@@ -7,4 +7,4 @@ type: Opaque
 stringData:
   username: user
   password: password
-  url: amqp://user:password@rabbitmq:5672/
+  url: amqp://user:password@dev-rabbitmq:5672/
