--- a/k8s/overlays/dev/secrets/supabase-secret.yaml
+++ b/k8s/overlays/dev/secrets/supabase-secret.yaml
@@ -7,3 +7,4 @@ type: Opaque
 stringData:
   SUPABASE_URL: https://your-supabase-project.supabase.co
   SUPABASE_ANON_KEY: change-me
+  SUPABASE_SERVICE_ROLE_KEY: change-me
